--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 </h6>
                 
 
-                <p>Prk. 5 New Malitbog Panabo City phone number: 0948515477 </p>
+                <p>Prk. 5 New Malitbog Panabo City </p>
               </div>
             </div>
           </div>
@@ -146,7 +146,7 @@
                 </h6>
                 
 
-                <p>Contact: 0948515477 </p>
+                <p>Phone number: 0948515477 </p>
                 <p>Email:elainebyun48@gmail.com</p>
               </div>
             </div>
